--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,10 +28,62 @@
     <string name="goback3">go back</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="rate_this_resturant">rate this resturant</string>
+    <string name="rate_this_restaurant">rate this restaurant</string>
     <string name="confirm_password">confirm password</string>
     <string name="search">Search</string>
     <string name="profile">profile</string>
     <string name="channel_name">LOGIN_CHANNEL-NOTIF</string>
     <string name="channel_description">LOGIN_CHANNEL_DESCRIPTION</string>
+    <string name="location_hanassi_blvd_139_haifa">location:HaNassi Blvd 139, Haifa</string>
+    <string name="cafe_cafe">cafe cafe</string>
+    <string name="location_yehuda_hamakkabbi_st_4_tel_aviv_yafo_6266905">location:Yehuda HaMakkabbi St 4א, Tel Aviv-Yafo, 6266905</string>
+    <string name="cafezorik">cafezorik</string>
+    <string name="cafe_zorik">cafe_zorik</string>
+    <string name="nahat_cafe_picture">nahat cafe picture</string>
+    <string name="location_dizengoff_square_1_tel_aviv_yafo">location:Dizengoff Square 1, Tel Aviv-Yafo</string>
+    <string name="cafe_shneor_picture">cafe shneor picture</string>
+    <string name="location_pinsker_st_20_tel_aviv_yafo_63421">location:Pinsker St 20, Tel Aviv-Yafo, 63421</string>
+    <string name="location_lincoln_st_9_tel_aviv_yafo">location:Lincoln St 9, Tel Aviv-Yafo</string>
+    <string name="cafe_tahchit_picture">cafe tahchit picture</string>
+    <string name="landwer_cafe_picture">landwer cafe picture</string>
+    <string name="location_72_tel_aviv_yafo">location;: רביעיית פלורנטין, אברבאנל 72, Tel Aviv-Yafo</string>
+    <string name="yonita_cafe_picture">yonita cafe picture</string>
+    <string name="_12_hashomer_st_7_tel_aviv_yafo">פינת, נחלת בנימין 12, HaShomer St 7, Tel Aviv-Yafo</string>
+    <string name="cafe_brussels_picture">cafe brussels picture</string>
+    <string name="cafe_cafe_haifa_picture">cafe cafe haifa picture</string>
+    <string name="cafe_hapina_picture">cafe hapina picture</string>
+    <string name="puzzle_cafe_picture">puzzle cafe picture</string>
+    <string name="location_moriah_ave_120_haifa">location:Moriah Ave 120, Haifa</string>
+    <string name="location_address_moriah_ave_13_haifa">location:Address: Moriah Ave 13, Haifa</string>
+    <string name="location_moriah_ave_13_haifa">location:Moriah Ave 13, Haifa</string>
+    <string name="location_masada_st_43_haifa">location:Masada St 43, Haifa</string>
+    <string name="rai_cafe_picture">rai cafe picture</string>
+    <string name="location_hillel_street_2_balfour_st_26_haifa_3307302">location:Hillel Street 2, Balfour St 26, Haifa, 3307302</string>
+    <string name="location_hanassi_blvd_119_haifa">location:HaNassi Blvd 119, Haifa</string>
+    <string name="cafe_deyoma_picture">cafe deyoma picture</string>
+    <string name="silva_cafe_picture">silva cafe picture</string>
+    <string name="location_masada_st_21_haifa">location:Masada St 21, Haifa</string>
+    <string name="sign_up">sign up</string>
+    <string name="cafe1">cafe</string>
+    <string name="bars">bars</string>
+    <string name="cafe">cafe</string>
+    <string name="restaurant">restaurant</string>
+    <string name="go_back">go back</string>
+    <string name="iza_bar_picture">iza bar picture</string>
+    <string name="location_moshe_aharon_st_1">location:Moshe Aharon St 1</string>
+    <string name="temple_bar_picture">temple bar picture</string>
+    <string name="location_hahistadrut_ave_55_haifa">location: HaHistadrut Ave 55, Haifa</string>
+    <string name="kingdom_bar_and_restaraunt_picture">kingdom bar and restaurant picture</string>
+    <string name="location_sderot_ben_gurion_37_haifa">location:Sderot Ben Gurion 37, Haifa</string>
+    <string name="momo_kitchen_bar_picture">momo kitchen bar picture</string>
+    <string name="the_bear_inn_picture">the bear inn picture</string>
+    <string name="nola_socks_pub_picture">nola socks pub picture</string>
+    <string name="wine_bar_by_andre_suidan_picture">wine bar by andre suidan picture</string>
+    <string name="location_hanassi_blvd_135_haifa">location;HaNassi Blvd 135, Haifa</string>
+    <string name="location_ahi_eilat_7_haifa">location:Ahi Eilat 7, Haifa</string>
+    <string name="location_shalom_aleichem_st_4_haifa">location:Shalom Aleichem St 4, Haifa</string>
+    <string name="location_hanassi_blvd_98_haifa">location:HaNassi Blvd 98, Haifa</string>
+    <string name="resturant">resturant</string>
+    <string name="go_back1">go back</string>
+    <string name="location_moshe_aharon_st1">location: moshe aharon st1</string>
 </resources>
